@@ -8,6 +8,7 @@ import org.bukkit.entity.Player;
 import org.bukkit.event.EventHandler;
 import org.bukkit.event.EventPriority;
 import org.bukkit.event.Listener;
+import org.bukkit.event.entity.EntityDamageByEntityEvent;
 import org.bukkit.event.entity.EntityDamageEvent;
 import org.bukkit.event.entity.EntityRegainHealthEvent;
 import org.bukkit.event.player.PlayerJoinEvent;
@@ -20,11 +21,20 @@ public class Listeners implements Listener {
             return;
         if (!(e.getEntity() instanceof LivingEntity))
             return;
+
+        if (!(e.getEntity() instanceof Player) && StorageFileManager.getConfig().getBool("only-show-entity-damage-from-players")) {
+            if (!(e instanceof EntityDamageByEntityEvent))
+                return;
+            if (!(((EntityDamageByEntityEvent) e).getDamager() instanceof Player))
+                return;
+        }
+
+        if (!StorageFileManager.getConfig().isAllowed("entity-type-list", e.getEntity().getType().name()))
+            return;
         if (StorageFileManager.getConfig().listContains("ignored-entities", e.getEntity().getName()))
             return;
 
-        LivingEntity entity = (LivingEntity) e.getEntity();
-        Bukkit.getServer().getPluginManager().callEvent(new HologramSpawnEvent(entity, -e.getFinalDamage()));
+        Bukkit.getServer().getPluginManager().callEvent(new HologramSpawnEvent((LivingEntity) e.getEntity(), -e.getFinalDamage()));
 
         // Handle health indicator
         if (e.getEntity() instanceof Player) {
@@ -36,14 +46,17 @@ public class Listeners implements Listener {
     public void onEntityRegainHealthEvent(EntityRegainHealthEvent e) {
         if (StorageFileManager.getConfig().listContains("disabled-worlds", e.getEntity().getWorld().getName()))
             return;
+        if (e.getAmount() < 1) // Minecraft doesn't register heals of less than half a heart
+            return;
         if (!(e.getEntity() instanceof LivingEntity))
+            return;
+
+        if (!StorageFileManager.getConfig().isAllowed("entity-type-list", e.getEntity().getType().name()))
             return;
         if (StorageFileManager.getConfig().listContains("ignored-entities", e.getEntity().getName()))
             return;
-        if (e.getAmount() < 1) // Minecraft doesn't register heals of less than half a heart
-            return;
-        LivingEntity entity = (LivingEntity) e.getEntity();
-        Bukkit.getServer().getPluginManager().callEvent(new HologramSpawnEvent(entity, e.getAmount()));
+
+        Bukkit.getServer().getPluginManager().callEvent(new HologramSpawnEvent((LivingEntity) e.getEntity(), e.getAmount()));
 
         // Handle health indicator
         if (e.getEntity() instanceof Player) {
