@@ -1,6 +1,6 @@
-# Config wiki and help can be found at https://gitlab.com/Zenya4/damage-indicator/-/wikis/Configuration
+# Config wiki and help can be found at https://github.com/Insprill/Damage-Indicator/wiki
 # For internal reference only, do not change the config version
-config-version: 2
+config-version: 3
 
 # How many decimal places to truncate indicator values
 # A value of 2 means that all damage indicators will show as x.xx
@@ -44,15 +44,24 @@ heal-format:
   4: "%f2faa%+%value%" # <-- The %fafaa% placeholder means the indicator will show as &f+&a0&f.&a6&a9 if the player heals by 4.20 points
   8: "%f2f22%+%value%"
 
+# Feature to display player health below their name
+health-indicators: true
+
 # DamageIndicator will not display any (damage) indicators in the following worlds
 # World names are cAsE sEnSiTiVe
 disabled-worlds:
   - nodelay
   - testworld
 
-# DamageIndicator will not display any (damage) indicators for the following entities
-ignored-entities:
+# If enabled, damage indicators will only be shown if it was caused by a player.
+only-show-entity-damage-from-players: true
+
+# Toggles the below entity type whitelist/blacklist.
+entity-type-list-enabled: true
+# If true, the following list will act as a whitelist instead of a blacklist.
+entity-type-list-as-whitelist: true
+entity-type-list:
   - ARMOR_STAND
 
-# Feature to display player health below their name
-health-indicators: true
+# DamageIndicator will not display any (damage) indicators for entities whom name is in this list.
+ignored-entities: [ ]
